tests/buffer/errors/buffer_size_negative.dby
import std.buffer as buf
buf.new(-1)
